[gd_scene load_steps=3 format=3 uid="uid://chmlchjo83o7r"]

[ext_resource type="Script" uid="uid://b8ls5i6xbb6ag" path="res://Scripts/panel_or.gd" id="1_1wk6x"]
[ext_resource type="PackedScene" uid="uid://bncua6dsl8vaq" path="res://Scene/h_box_container_mineur.tscn" id="2_efsu3"]

[node name="PanelOr" type="PanelContainer"]
layout_direction = 1
anchors_preset = -1
anchor_left = 0.393
anchor_right = 0.393
offset_left = -340.736
offset_top = 111.0
offset_right = 0.263977
offset_bottom = 217.0
size_flags_vertical = 3
script = ExtResource("1_1wk6x")

[node name="VBoxContainerAcheté" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2

[node name="ButtonMinerOr" type="Button" parent="VBoxContainerAcheté"]
layout_mode = 2
text = "Miner de l'or"

[node name="ButtonVendreOr" type="Button" parent="VBoxContainerAcheté"]
layout_mode = 2
text = "Vendre 10 d'or pour 20$ "

[node name="ButtonAcheterMineurOr" type="Button" parent="VBoxContainerAcheté"]
layout_mode = 2
text = "Acheter un mineur (500$ et 100 or)"

[node name="HBoxContainerMineur" parent="VBoxContainerAcheté" instance=ExtResource("2_efsu3")]
layout_mode = 2
size_flags_horizontal = 4

[node name="VBoxContainerAcheter" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 4

[node name="ButtonAcheterMine" type="Button" parent="VBoxContainerAcheter"]
layout_mode = 2
text = "Acheter la mine (1000$)"

[connection signal="pressed" from="VBoxContainerAcheté/ButtonMinerOr" to="." method="_on_button_miner_or_pressed"]
[connection signal="pressed" from="VBoxContainerAcheté/ButtonVendreOr" to="." method="_on_button_vendre_or_pressed"]
[connection signal="pressed" from="VBoxContainerAcheté/ButtonAcheterMineurOr" to="." method="_on_button_acheter_mineur_or_pressed"]
[connection signal="pressed" from="VBoxContainerAcheter/ButtonAcheterMine" to="." method="_on_button_acheter_mine_pressed"]
